--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "express-http-proxy": "^1.5.1",
     "file-loader": "^4.0.0",
+    "image-webpack-loader": "^5.0.0",
     "moment": "^2.24.0",
     "react-moment": "^0.8.4",
     "react-router-dom": "^5.0.0",
